--- a/styles.css
+++ b/styles.css
@@ -817,7 +817,7 @@ body {
 
 .time-buttons-right {
     position: absolute;
-    right: 0;
+    right: 5px;
     height: 100%;
     background-color: white;
 }
