--- a/styles.css
+++ b/styles.css
@@ -1029,6 +1029,7 @@ select:focus {
         height: 100%;
         padding: 0;
         border-radius: 15px 15px 0px 0px;
+        box-shadow: none;
     }
 
     .panel-body {
