--- a/styles.css
+++ b/styles.css
@@ -1026,10 +1026,11 @@ select:focus {
 
     .panel {
         width: 100%;
-        height: 100%;
+        height: 160%;
         padding: 0;
         border-radius: 15px 15px 0px 0px;
         box-shadow: none;
+        overflow: hidden;
     }
 
     .panel-body {
