--- a/styles.css
+++ b/styles.css
@@ -543,8 +543,6 @@ body {
     .body-facts {
         display: none;
     }
-
-
 }.p20 {
     padding: 20px;
 }
@@ -827,14 +825,14 @@ body {
     flex-direction: column;
     justify-content: center;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     /* margin-right: 10px; */
 }
 
 .time-buttons > svg {
     color: gray;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     max-height: 15px;
     cursor: pointer;
