--- a/styles.css
+++ b/styles.css
@@ -508,6 +508,7 @@ body {
 @media (max-width: 500px) {
     .landing-header {
         font-size: 36px;
+        padding: 0;
     }
 
     .form-landing {
@@ -528,6 +529,10 @@ body {
         margin: 3px;
     }
 
+    #name {
+        margin-bottom: 15px;
+    }
+
     #age {
         display: none;
     }
@@ -537,7 +542,7 @@ body {
     }
 
     .btn-right {
-        width: 70%;
+        width: calc(85% - 65px);
     }
 
     .body-facts {
@@ -1013,28 +1018,43 @@ select:focus {
     .container {
         width: 100%;
         height: 100%;
-        display: block;
+        display: unset;
+        align-content: center;
+        display: flex;
+        gap: 2%;
     }
 
     .pace-text-wrapper {
         display: none;
     }
-
+    
     .panel-container {
+        overflow: scroll;
         height: 100%;
+        width: 100%;
     }
 
     .panel {
         width: 100%;
-        height: 160%;
+        height: 100%;
         padding: 0;
         border-radius: 15px 15px 0px 0px;
         box-shadow: none;
-        overflow: hidden;
+        overflow: scroll;
     }
+
 
     .panel-body {
         padding: 20px;
+    }
+
+    .pace-navigation-buttons {
+        position: absolute;
+        display: block;
+        flex-direction: column;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
 }
 /**** TABLE *****/
