--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
 
 .button:hover {
     cursor: pointer;
-    font-weight: bolder;
 }
 
 .btn-green {
@@ -32,12 +31,16 @@
     width: 100%;
 }
 
+.btn-green:hover {
+    background-color: #309546B3;
+}
+
 .btn-white {
-    min-width: 125px;
+    min-width: 150px;
     display: flex;
     align-items: center;
     margin: 10px;
-    padding: 15px;
+    padding: 5px 15px;
     background-color: #FFFFFF;
     border-radius: 30px;
     color: #000000;
@@ -46,6 +49,11 @@
     font-weight: 600;
     font-size: 16px;
     vertical-align: middle;
+}
+
+.btn-white:hover {
+    cursor: pointer;
+    font-weight: bolder;
 }
 
 .btn-white > * {
@@ -63,16 +71,25 @@
     position: relative;
 }
 
+.btn-white-panel:hover {
+    font-weight: bolder;
+}
+
+.btn-white-panel:focus {
+    outline: 1px solid #309546;
+}
+
 .btn-white-panel > span {
     position: absolute;
     right: 30px;
 }
 
 .btn-round {
+    position: relative;
+    width: 30px;
+    height: 30px;
     margin: 15px;
     padding: 5px;
-    width: 20px;
-    height: 20px;
     border-radius: 50%;
     font-size: 20px;
     line-height: 20px;
@@ -82,8 +99,34 @@
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
 }
 
+.btn-round > img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 20px;
+}
+
 .btn-right {
     min-width: 200px;
+}
+
+.btn-transparent {
+    padding: 15px;
+    background-color: transparent;
+    text-align: center;
+    text-transform: uppercase;
+    /* font-weight: bold; */
+}
+
+.btn-transparent:hover {
+    font-weight: bolder;
+}
+
+.btn-transparent:focus {
+    outline: 1px solid #309546;
 }
 
 
@@ -97,7 +140,7 @@
     position: absolute;
 } */
 
-.btn-green:has(.icon-next) {
+.p-right-50 {
     padding-right: 50px;
 }
 
@@ -112,14 +155,14 @@
     stroke-width: 13px;
 }
 
-.btn-transparent {
-    padding: 15px;
-    background-color: transparent;
-    text-align: center;
-    text-transform: uppercase;
-    /* font-weight: bold; */
+option {
+    font-family: 'Montserrat',Verdana,Geneva,sans-serif;
 }
 
+hr {
+    padding: 0;
+    margin: 0;
+}
 
 
 /**** FLEX *****/
@@ -133,6 +176,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.space {
+    justify-content: space-between;
 }
 
 .row-3:nth-child(2) { margin: 0px 6px;}
@@ -166,19 +213,6 @@
     font-size: 10px;
 }
 
-.form-landing {
-    padding: 40px 125px;
-}
-
-.form-landing > * {
-    margin: 0px 5px;
-}
-
-.input-landing:nth-of-type(1) {
-    flex-grow: 3.5;
-}
-
-
 input:focus {
     outline: none;
 }
@@ -201,11 +235,19 @@ input[type=range] {
 
     appearance: none;
     width: 100%;
-    background-color: #FFFFFF;
+    background-color: #A7A7A7;
     border-radius: 15px;
     outline: none;
     border: none;
     overflow: hidden;
+}
+
+/* input[type=range]:active {
+    outline: #309546 solid 1px;
+} */
+
+input[type=range]:focus {
+    outline: #309546 solid 1px;
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -220,10 +262,22 @@ input[type=range]::-webkit-slider-thumb {
     box-shadow: -407px 0 0 400px #309546;
 }
 
+input[type=range]::-moz-range-thumb {
+    appearance: none;
+    height: 15px;
+    width: 15px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    outline: none;
+    border: 1px #309546 solid;
+    cursor: pointer;
+    box-shadow: -407px 0 0 400px #309546;
+}
+
 .range-container {
+    margin-top: auto;
+    justify-content: end;
     display: flex;
-    height: 100%;
-    align-items: center;
 }
 
 .result-buttons {
@@ -238,7 +292,7 @@ input[type=range]::-webkit-slider-thumb {
 .body-facts {
     width: 120px;
     overflow: hidden;
-    transition: min-width 1s;
+    transition: min-width .7s;
 }
 
 .body-facts span {
@@ -263,7 +317,22 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-@font-face {
+@media (max-width: 500px) {
+    input[type=range] {
+        height: 18px;
+        border-radius: 18px;
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+        height: 18px;
+        width: 18px;
+    }
+
+    input[type=range]::-moz-range-thumb {
+        height: 18px;
+        width: 18px;
+    }
+}@font-face {
     font-family: Montserrat;
     src: url('./fonts/Montserrat-VariableFont_wght.ttf');
 }
@@ -295,6 +364,11 @@ body {
     color: #FFFFFF;
 }
 
+.dry {
+    background-image: url("./images/dry.jpeg");
+    color: #FFFFFF;
+}
+
 .rain {
     background-image: url("./images/rain.jpeg");
     color: #F7F7F7;
@@ -308,18 +382,20 @@ body {
 
 .container {
     display: flex;
+    width: 75%;
+    margin: auto;
     /* max-width: 1000px; */
     /* width: 85%; */
     /* margin: auto; */
     /* margin-top: 150px; */
     /* position: relative;
-    top: 50%;
+    
     transform: translateY(-50%); */
+    height: 80%;
     justify-content: space-between;
     align-content: center;
     flex-flow: row wrap;
     position: relative;
-    
 }
 /**** HEADER *****/
 .header {
@@ -347,27 +423,35 @@ body {
     position: absolute;
     display: none;
     height: 100%;
+    justify-content: center;
     /* transform: translateX(100%); */
 }
 
 .page.form {
-    background-color: #FFFFFF;
+    background-color: #f7f7f7;
     color: #1E1E1E;
     top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
+    z-index: 200;
     /* box-shadow: -0.5em 0 0 rgba(0, 0, 0, 0.1); */
 }
 
 .active {
     /* transform: translateX(0%); */
     display: block;
+}.landing-container {
+    position: relative;
+    max-width: 950px;
+    justify-content: center;
+    margin: auto;
 }
+
 .landing-header {
     font-weight: 700;
     font-size: 65px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     text-align: center;
     padding: 25px;
 }
@@ -375,6 +459,14 @@ body {
 .landing-main {
     font-weight: 400;
     font-size: 28px;
+    text-align: center;
+    padding: 0px 70px;
+}
+
+.landing-main-short {
+    display: none;
+    font-weight: 400;
+    font-size: 22px;
     text-align: center;
     padding: 0px 70px;
 }
@@ -395,21 +487,110 @@ body {
     background: white;
 }
 
-
 .input-landing.input-valid {
     box-shadow: inset 0 0 0 2px #309546;
-    background-image: url('../icons/Gedaan.svg');
+    background-image: url('./icons/Gedaan.svg');
     background-repeat: no-repeat;
     background-position: right 10px bottom 50%;
-}.half {
+}
+
+.form-landing {
+    padding: 40px 125px;
+    width: 100%;
+}
+
+.form-landing > * {
+    margin: 0px 5px;
+}
+
+.input-landing:nth-of-type(1) {
+    flex-grow: 3.5;
+}
+
+#name {
+    min-width: 210px;
+}
+
+#age {
+    min-width: 95px;
+}
+
+#weight {
+    min-width: 95px;
+}
+
+#factsText {
+    text-wrap: wrap;
+    text-align: left;
+    max-height: 48px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+            line-clamp: 2; 
+    -webkit-box-orient: vertical;
+}
+
+@media (max-width: 500px) {
+    .landing-header {
+        font-size: 36px;
+        padding: 0;
+    }
+
+    .form-landing {
+        padding: 0;
+        flex-direction: column;
+    }
+
+    .landing-main {
+        display: none;
+    }
+
+    .landing-main-short {
+        display: block;
+    }
+
+    .input-landing {
+        width: 85%;
+        margin: 3px;
+    }
+
+    #name {
+        margin-bottom: 15px;
+    }
+
+    #age {
+        display: none;
+    }
+
+    #weight {
+        display: none;
+    }
+
+    .btn-right {
+        width: calc(85% - 65px);
+    }
+
+    .body-facts {
+        display: none;
+    }
+}.p20 {
+    padding: 20px;
+}
+
+.form-fullscreen-btn {
+    position: absolute;
     margin: auto;
-    width: 50%;
-    padding-top: 50px;
+    width: 90%;
+    left: 0;
+    right: 0;
+    bottom: 5%;
 }
 
 #negative-split-range-label {
     position: absolute;
+    top: -15px;
 }
+
 
 /**** FORM *****/
 
@@ -446,10 +627,15 @@ body {
 
 .form-fullscreen-body {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    max-width: 400px;
+    min-height: 500px;
 }
 
 .form-fullscreen-question {
@@ -458,19 +644,46 @@ body {
     font-size: 28px;
 }
 
-/**** PANEL *****/
+.right-form {
+    position: absolute;
+    top: 20px;
+    right: 25px;
+}
+
+@media (max-width: 500px) {
+    .form-fullscreen {
+        height: 100%;
+    }
+    .form-fullscreen-body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        position: unset;
+        max-width: unset;
+        min-height: unset;
+        transform: unset;
+        -webkit-transform: unset;
+    }
+
+    .form-row {
+        display: flex;
+        gap: 10px;
+        /* flex-direction: column; */
+    }
+}/**** PANEL *****/
 .panel {
     background-color: #F7F7F7;
     border-radius: 15px;
     padding: 20px;
     box-shadow: inset 0 -0.5em 1em rgba(0, 0, 0, 0.1), 0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
     position: relative;
-    /* min-width: 400px; */
+    width: 370px;
     color: #1E1E1E;
 }
 
 .panel-body {
-    padding: 10px;
+    padding: 10px 0px;
 }
 
 .panel-title {
@@ -478,7 +691,11 @@ body {
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+}
+
+.panel-title-result {
+    font-weight: bold;
 }
 
 .panel-close {
@@ -491,33 +708,45 @@ body {
     box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
 }
 
-.panel-container {
-    position: absolute;
-    margin: auto;
-    right: 0;
-    left: 0;
-    max-width: 400px;
+
+.filler {
+    width: 400px;
 }
 
+
 .panel-detail {
+    gap: 25px;
     display: flex;
     background-color: #AA9A6B;
     color: #F7F7F7;
-    padding: 25px;
+    padding: 25px 15px;
     border-radius: 5px;
     box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.25);
 }
 
+.panel-detail-col + .panel-detail-col {
+    margin-left: 30px;
+}
+
 .panel-detail-col {
     position: relative;
-    flex: 1;
+    width: 33.33%; /* as @passatgt mentioned in the comment, for the older browsers fallback */
+    width: calc(100% / 3);
     text-align: center;
 }
 
 .panel-detail-col > * {
     display: block;
-    margin: 10px 0px;
 }
+
+.panel-detail-col:nth-child(-n + 2) {
+    text-align: left;
+}
+
+.panel-detail-col:nth-last-child(-n + 1) {
+    text-align: right;
+}
+
 
 .panel-detail-value {
     font-weight: 700;
@@ -526,9 +755,12 @@ body {
 
 .panel-detail-label {
     font-weight: 400;
-    font-weight: lighter;
-    font-size: 12px;
+    /* font-weight: lighter; */
+    font-size: 8px;
     text-transform: uppercase;
+    padding: 0;
+    margin: 0;
+    line-height: 0;
 }
 
 .panel-table {
@@ -539,11 +771,6 @@ body {
     -moz-transition: height .25s linear;
     -o-transition: height .25s linear;
     transition: height .25s linear;
-}
-
-
-.pace-text-wrapper {
-    padding-left: 40px;
 }
 
 /**** RIGHT-SIDE *****/
@@ -566,13 +793,13 @@ body {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.right-side-head[data-resolve="name"]::before {
+/* .right-side-head[data-resolve="name"]::before {
     content: "Hoi ";
 }
 
 .right-side-head[data-resolve="name"]::after {
     content: "!";
-}
+} */
 
 .right-side-main {
     font-weight: 400;
@@ -597,7 +824,7 @@ body {
     position: relative;
     display: flex;
     background: #FFFFFF;
-    width: 130px;
+    width: 140px;
     color: #000000;
     border-radius: 3px;
     margin-right: 5px;
@@ -605,28 +832,31 @@ body {
     overflow: hidden;
 }
 
-.time-wrapper > * > span {
+/* .time-wrapper > * > span {
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -o-user-select: none;
-}
+} */
 
 .input-pace-time {
+    position: relative;
     padding: 15px 0px 15px 10px;
-    margin-right: 30px;
+    /* margin-right: 30px; */
+    display: flex;
 }
 
 .input-speed {
     padding: 15px 0px 15px 10px;
-    margin-right: 30px;
+    /* margin-right: 30px; */
 }
 
 .time-buttons-right {
     position: absolute;
-    right: 0;
+    right: 5px;
     height: 100%;
+    background-color: white;
 }
 
 .time-buttons {
@@ -634,21 +864,34 @@ body {
     flex-direction: column;
     justify-content: center;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
-    margin-right: 15px;
+    /* margin-right: 10px; */
 }
 
 .time-buttons > svg {
     color: gray;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     max-height: 15px;
     cursor: pointer;
 }
 
 [contenteditable] {
+    user-select: text;
+    -webkit-user-select: text;
     outline: 0px solid transparent;
+    font-variant-numeric: tabular-nums;
+    z-index: 10;
+    overflow: hidden;
+    white-space: nowrap;
+    /* text-shadow: 0 0 0 #000; */
+    /* color: transparent; */
+}
+
+[contenteditable]:focus {
+    background-color: #309546B3;
+    color: white;
 }
 
 .range-label-container {
@@ -671,6 +914,7 @@ body {
     border: 2px solid #309546;
     border-radius: 2px;
     height: 76px;
+    background-color: #FFFFFF;
 }
 
 .form-input-button input {
@@ -686,6 +930,7 @@ body {
     color: gray;
     height: 100%;
     margin-right: 15px;
+    margin-left: 5px;
     width: 35px;
     transition: color .2s ease-in-out;
     /* cursor: pointer; */
@@ -720,6 +965,9 @@ body {
     text-transform: uppercase;
 }
 
+select:focus {
+    background-color: #A7A7A7;
+}
 
 .select-wrapper {
     width: 100%;
@@ -779,7 +1027,7 @@ body {
 
 
 .input-readonly {
-    padding: 10px 0px;
+    padding: 10px 0 0 0;
     font-family: Montserrat;
     font-size: 16px;
     border: none;
@@ -792,6 +1040,70 @@ body {
     box-shadow: none;
 }
 
+.pace-button-wrapper {
+    margin-top: 20px;
+}
+
+@media (max-width: 500px) {
+    .header {
+        display: none;
+    }
+
+    .container {
+        width: 100%;
+        height: 100%;
+        display: unset;
+        align-content: center;
+        display: flex;
+    }
+
+    .landing-container {
+        gap: 2%;
+    }
+
+    .pace-text-wrapper {
+        display: none;
+    }
+
+    .range-label {
+        top: -8px;
+    }
+    
+    .panel-container {
+        overflow: scroll;
+        min-height: 575px;
+        height: 100%;
+        width: 100%;
+    }
+
+    .panel {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        border-radius: 0;
+        box-shadow: none;
+        overflow: scroll;
+    }
+
+
+    .panel-body {
+        padding: 20px;
+    }
+
+    .pace-navigation-buttons {
+        position: absolute;
+        display: block;
+        flex-direction: column;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+
+    .form-fullscreen-body {
+        width: 85%;
+        margin: auto;
+    }
+}
 /**** TABLE *****/
 
 table {
@@ -822,8 +1134,8 @@ th:nth-last-child(-n + 2) {
 th {
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 16px;
-    padding: 5px 2px;
+    font-size: 12px;
+    padding: 5px 0px;
 }
 
 tr:nth-last-child(-n + 1) td {
@@ -831,8 +1143,9 @@ tr:nth-last-child(-n + 1) td {
 }
 
 td {
+    font-variant-numeric: tabular-nums;
     text-align: right;
-    padding: 7px;
+    padding: 4px 0px;
     font-size: 12px;
     /* padding-right: 30px; */
 }
@@ -848,6 +1161,14 @@ td {
     right: 25px;
 }
 
+.WIMH-content {
+    position: absolute;
+    top: 200px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .WIMH-header {
     font-size: 74px;
     font-weight: bold;
@@ -858,6 +1179,12 @@ td {
     margin-top: 20px;
     font-size: 38px;
     font-weight: bold;
+}
+
+.WIMH-fullscreen-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #WIMH p {
