--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
     text-transform: uppercase;
     font-weight: 600;
     font-size: 20px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .btn-green span {
@@ -142,6 +142,7 @@
 
 .p-right-50 {
     padding-right: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .icon-next {
