--- a/styles.css
+++ b/styles.css
@@ -500,6 +500,12 @@ body {
     background: white;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
+}
+
 .input-landing.input-valid {
     box-shadow: inset 0 0 0 2px #309546;
     background-image: url('./icons/Gedaan.svg');
@@ -656,7 +662,7 @@ body {
     color: #B7B7B7;
     font-size: 10px;
     font-weight: 500;
-    text-wrap: nowrap;
+    white-space: nowrap;
 }
 
 .show {
