--- a/styles.css
+++ b/styles.css
@@ -274,6 +274,10 @@ input[type=range] {
     outline: #309546 solid 1px;
 } */
 
+input[type=range]:hover {
+    outline: #309546 solid 1px;
+}
+
 input[type=range]:focus {
     outline: #309546 solid 1px;
 }
@@ -862,7 +866,7 @@ input:-webkit-autofill:focus {
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 }
 
 .panel-title-result {
@@ -1230,6 +1234,12 @@ select:focus {
     box-shadow: none;
 }
 
+.pace-navigation-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 
 @media (max-width: 500px) {
     .header {
@@ -1297,10 +1307,6 @@ select:focus {
         left: 0;
         right: 0;
         padding: 0px 25px;
-    }
-
-    .pace-navigation-buttons {
-        gap: 15px;
     }
 
     .form-fullscreen-body {
